# speaker-diarization

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: diarization.pkl  diarization.txt
pyannote-audio/pyannote/audio/augmentation/: mix.py  registry.py
pyannote-audio/pyannote/audio/cli/: evaluate.py  train.py
pyannote-audio/pyannote/audio/cli/lr_schedulers/: CosineAnnealingWarmRestarts.py
pyannote-audio/pyannote/audio/core/: callback.py  inference.py  io.py  model.py  pipeline.py  task.py
pyannote-audio/pyannote/audio/models/blocks/: pooling.py  sincnet.py
pyannote-audio/pyannote/audio/models/embedding/: debug.py  xvector.py
pyannote-audio/pyannote/audio/models/segmentation/: PyanNet.py  SSeRiouSS.py  debug.py
pyannote-audio/pyannote/audio/pipelines/: clustering.py  multilabel.py  overlapped_speech_detection.py  resegmentation.py  speaker_diarization.py  speaker_verification.py  voice_activity_detection.py
pyannote-audio/pyannote/audio/pipelines/utils/: diarization.py  getter.py  hook.py  oracle.py
pyannote-audio/pyannote/audio/tasks/embedding/: arcface.py  mixins.py
pyannote-audio/pyannote/audio/tasks/segmentation/: mixins.py  (+4 more)
pyannote-audio/pyannote/audio/utils/: loss.py  metric.py  multi_task.py  permutation.py  powerset.py  preprocessors.py  preview.py  protocol.py  reproducibility.py  signal.py  version.py
pyannote-audio/tests/: inference_test.py  io_test.py  test_run_notebooks.py  test_train.py
pyannote-audio/tests/tasks/: test_reproducibility.py
pyannote-audio/tests/utils/: preview.py  probe_util_test.py  test_permutation.py  test_powerset.py
(+3 files in other folders)
